--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,17 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="portfolio site of gideon baeza" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta property="og:image" content="%PUBLIC_URL%/shermansPoint" />
+    <meta property="og:image:secure_url" content="%PUBLIC_URL%/shermansPoint" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="700" />
+    <meta property="og:image:height" content="292" />
+    <meta property="og:image:alt" content="gideon baeza, film maker" />
+
     <title>Gideon Baeza</title>
 
 </head>
