added accent to resume

--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="portfolio site of gideon baeza" />
+    <meta name="description" content="portfolio site of gideon baeza, film maker" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta property="og:image" content="%PUBLIC_URL%/shermansPoint" />
-    <meta property="og:image:secure_url" content="%PUBLIC_URL%/shermansPoint" />
+    <meta property="og:image" content="%PUBLIC_URL%/shermansPoint.png" />
+    <meta property="og:image:secure_url" content="%PUBLIC_URL%/shermansPoint.png" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="700" />
     <meta property="og:image:height" content="292" />
