--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <meta property="og:image" content="%PUBLIC_URL%/shermansPoint.png" />
-    <meta property="og:image:secure_url" content="%PUBLIC_URL%/shermansPoint.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/bmps/shermansPoint.png" />
+    <meta property="og:image:secure_url" content="%PUBLIC_URL%/bmps/shermansPoint.png" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="700" />
     <meta property="og:image:height" content="292" />
