changed one movie title

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta property="og:image:height" content="292" />
     <meta property="og:image:alt" content="gideon baeza, film maker" />
 
-    <title>Gideon Baeza</title>
+    <title>Gideon Baeza -- filmmaker</title>
 
 </head>
 
